--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,10 @@ numpy>=1.24.0
 # Web server
 aiohttp>=3.9.0
 
-# Optional: VAD (Voice Activity Detection)
-# webrtcvad>=2.0.10
+# Global hotkey (cross-platform)
+pynput>=1.7.6
 
-# Optional: Translation APIs
-# google-cloud-translate>=3.12.0
-# deepl>=1.16.0
+# Translation (offline)
+ctranslate2>=4.0.0
+transformers>=4.36.0
+sentencepiece>=0.1.99
