--- a/.github/workflows/build-windows.yml
+++ b/.github/workflows/build-windows.yml
@@ -39,42 +39,32 @@ jobs:
         run: |
           Invoke-WebRequest -Uri "https://github.com/ggml-org/whisper.cpp/releases/download/v1.7.3/whisper-bin-x64.zip" -OutFile "whisper-bin.zip"
           Expand-Archive -Path "whisper-bin.zip" -DestinationPath "whisper-temp"
-          # Find and copy the main executable
           Copy-Item -Path "whisper-temp/whisper.exe" -Destination "bin/whisper-cli.exe" -ErrorAction SilentlyContinue
           Copy-Item -Path "whisper-temp/main.exe" -Destination "bin/whisper-cli.exe" -ErrorAction SilentlyContinue
 
-      - name: Download MarianMT translation model
-        run: |
-          # Download pre-converted CTranslate2 model for EN->PT
-          # Using ct2-transformers-converter would require torch, so we download pre-converted
-          python -c "
-          from huggingface_hub import snapshot_download
-          snapshot_download(
-              repo_id='Helsinki-NLP/opus-mt-en-pt',
-              local_dir='models/opus-mt-en-pt-hf',
-              local_dir_use_symlinks=False
-          )
-          "
-
-      - name: Convert MarianMT to CTranslate2 format
-        run: |
-          pip install ctranslate2
-          ct2-transformers-converter --model models/opus-mt-en-pt-hf --output_dir models/opus-mt-en-pt-ct2 --quantization int8
-
-      - name: Download M2M100 translation model
+      - name: Convert MarianMT (Helsinki) to CTranslate2
         run: |
           python -c "
-          from huggingface_hub import snapshot_download
-          snapshot_download(
-              repo_id='facebook/m2m100_418M',
-              local_dir='models/m2m100-hf',
-              local_dir_use_symlinks=False
-          )
+          import ctranslate2
+          converter = ctranslate2.converters.TransformersConverter('Helsinki-NLP/opus-mt-en-pt')
+          converter.convert('models/opus-mt-en-pt-ct2', quantization='int8', force=True)
+
+          from transformers import MarianTokenizer
+          tokenizer = MarianTokenizer.from_pretrained('Helsinki-NLP/opus-mt-en-pt')
+          tokenizer.save_pretrained('models/opus-mt-en-pt-ct2')
           "
 
-      - name: Convert M2M100 to CTranslate2 format
+      - name: Convert M2M100 (Brazilian PT) to CTranslate2
         run: |
-          ct2-transformers-converter --model models/m2m100-hf --output_dir models/m2m100-en-pt-br-ct2 --quantization int8
+          python -c "
+          import ctranslate2
+          converter = ctranslate2.converters.TransformersConverter('danhsf/m2m100_418M-finetuned-kde4-en-to-pt_BR')
+          converter.convert('models/m2m100-en-pt-br-ct2', quantization='int8', force=True)
+
+          from transformers import M2M100Tokenizer
+          tokenizer = M2M100Tokenizer.from_pretrained('danhsf/m2m100_418M-finetuned-kde4-en-to-pt_BR')
+          tokenizer.save_pretrained('models/m2m100-en-pt-br-ct2')
+          "
 
       - name: Build with PyInstaller
         run: |
