--- a/.github/workflows/build-windows-debug.yml
+++ b/.github/workflows/build-windows-debug.yml
@@ -32,6 +32,27 @@ jobs:
         run: |
           Invoke-WebRequest -Uri "https://huggingface.co/ggerganov/whisper.cpp/resolve/main/ggml-small.en-q5_1.bin" -OutFile "models/ggml-small.en-q5_1.bin"
 
+      - name: Download and extract Whisper CUDA binaries
+        run: |
+          Invoke-WebRequest -Uri "https://github.com/ggml-org/whisper.cpp/releases/download/v1.8.2/whisper-cublas-12.4.0-bin-x64.zip" -OutFile "whisper-bin.zip"
+          Expand-Archive -Path "whisper-bin.zip" -DestinationPath "whisper-temp"
+          # Copy required DLLs and binaries to bin folder
+          Copy-Item -Path "whisper-temp/cublas64_12.dll" -Destination "bin/"
+          Copy-Item -Path "whisper-temp/cublasLt64_12.dll" -Destination "bin/"
+          Copy-Item -Path "whisper-temp/cudart64_12.dll" -Destination "bin/"
+          Copy-Item -Path "whisper-temp/ggml-base.dll" -Destination "bin/"
+          Copy-Item -Path "whisper-temp/ggml-cpu.dll" -Destination "bin/"
+          Copy-Item -Path "whisper-temp/ggml-cuda.dll" -Destination "bin/"
+          Copy-Item -Path "whisper-temp/ggml.dll" -Destination "bin/"
+          Copy-Item -Path "whisper-temp/nvblas64_12.dll" -Destination "bin/"
+          Copy-Item -Path "whisper-temp/nvrtc-builtins64_124.dll" -Destination "bin/"
+          Copy-Item -Path "whisper-temp/nvrtc64_120_0.dll" -Destination "bin/"
+          Copy-Item -Path "whisper-temp/whisper-cli.exe" -Destination "bin/"
+          Copy-Item -Path "whisper-temp/whisper.dll" -Destination "bin/"
+          # Cleanup
+          Remove-Item -Path "whisper-bin.zip"
+          Remove-Item -Path "whisper-temp" -Recurse
+
       - name: Convert MarianMT (Helsinki) to CTranslate2
         run: |
           python -c "
